fixed the double scrolling bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 		line-height: 1.75em;
 	}
 
-	html, body {
+	body {
 		background: white;
 		max-width: 100%;
 		overflow-x: hidden;
